--- a/symfony/templates/user/show.html.twig
+++ b/symfony/templates/user/show.html.twig
@@ -16,7 +16,7 @@
     <h1 class="text-2xl text-blue-500">Vos séries suivies</h1>
     
     <div class="flex w-full ">
-        <div class="flex flex-row w-full items-center">
+        <div class="flex flex-row w-full flex-wrap items-center">
        
                 {% for serie in app.user.getSeries %}
                 <div class="flex flex-col w-48 mx-5">
