--- a/symfony/templates/series/random.html.twig
+++ b/symfony/templates/series/random.html.twig
@@ -9,6 +9,7 @@
 			background-image: none;
 		}
 	</style>
+	<base target="_parent">
 	<div class="flex flex-row w-full h-full">
 		{% for serie in series %}
 			<div class="serie-encadre border-none border-4 rounded-3xl flex flex-col-reverse mb-4 h-auto mx-10 mt-5 items-center">
