--- a/symfony/templates/series/index.html.twig
+++ b/symfony/templates/series/index.html.twig
@@ -9,8 +9,7 @@
 {% endblock %}
 
 {% block body %}
-    <h1>Séries Aléatoires</h1>
-	<iframe src="{{ path('app_series_random')}}" style="width: 100%; height: 450px; border: 1px solid black;"></iframe>
+	<iframe src="{{ path('app_series_random')}}" class="w-full h-96"></iframe>
     <div style="height: 30px;"></div>
 
         <div class="pagination-h">
@@ -31,7 +30,7 @@
                     </a>
                     {% else %}
                     <a href="{{ path('app_series_add_from_index',  {'id': series.id, 'user_id':app.user.id}) }}">
-                        <img class="serie-check absolute rounded-2xl rounded-bl-none rounded-tr-none" width="60px" src="{{ asset('img/plus.png') }}" />
+                        <img class="bg-blue-900 serie-check absolute rounded-2xl rounded-bl-none rounded-tr-none" width="60px" src="{{ asset('img/plus.png') }}" />
                     </a>
                     {% endif %}
                     {% endif %}
