--- a/symfony/templates/base.html.twig
+++ b/symfony/templates/base.html.twig
@@ -14,9 +14,9 @@
     </head>
     <body class="page">
       <div class="navbar z-10 absolute">
-        <ul class="barre backdrop-blur-lg mb-10 flex items-center justify-between text-blue-500 pt-1 pb-2 top-0 rounded-b-2xl w-screen fixed border-b-4 border-blue-custom border-b">
-            <a href="{{ path('app_series_index') }}"><img class="px-4 h-36 xl:h-24 hidden xl:inline " src="{{ asset('img/logo_pc.png') }}" alt="logo"/></a>
-            <img class="px-4 h-36 xl:h-24 xl:hidden " src="{{ asset('img/logo_mobile.png') }}" alt="logo"/>
+        <ul class="barre backdrop-blur-lg flex items-center justify-between text-blue-500 pt-1 pb-2 top-0 rounded-b-2xl w-screen fixed border-b-4 border-blue-custom border-b">
+            <a class="hidden xl:inline" href="{{ path('app_series_index') }}"><img class="px-4 h-36 xl:h-24 hidden xl:inline " src="{{ asset('img/logo_pc.png') }}" alt="logo"/></a>
+            <a class="inline xl:hidden" href="{{ path('app_series_index') }}"><img class="px-4 h-36 xl:h-24 xl:hidden " src="{{ asset('img/logo_mobile.png') }}" alt="logo"/></a>
             <ul class="flex text-5xl xl:text-2xl md:text-3xl ">
             <li class="nav-item -mb-px px-5 mr-1">
               <a class="inline-block py-4 hover:text-blue-custom font-semibold" href="{{ path('app_series_index') }}">Accueil</a>
@@ -38,10 +38,6 @@
                       <li class=""><a class="rounded-b bg-blue-500 hover:bg-blue-custom py-2 px-4 block whitespace-no-wrap" href="{{ path('app_logout') }}">Déconnexion</a></li>
                     </ul>
                   </div>
-            </li>
-            
-            <li class=" nav-item px-5 mr-1">
-              <a class="inline-block py-4 hover:text-blue-custom font-semibold" href="">Déconnexion</a>
             </li>
             <li class=" hidden nav-item px-5 mr-1">
               <a class="inline-block py-4 hover:text-blue-custom font-semibold" href="{{ path('app_login') }}">Connexion</a>
