--- a/symfony/templates/series/random.html.twig
+++ b/symfony/templates/series/random.html.twig
@@ -10,9 +10,9 @@
 		}
 	</style>
 	<base target="_parent">
-	<div class="flex flex-row w-full h-64">
+	<div class="carrousel flex flex-row w-full h-full items-center pb-10">
 		{% for serie in seriesRand %}
-				<div class="poster mx-px px-5 w-52 h-full">
+				<div class="mx-px px-5 w-1/10 justify-center h-full">
 					{% if app.user %}
                     {% if seriesRand in app.user.getSeries  %}
                     <a  href="{{ path('app_series_remove_from_random',  {'id': serie.id, 'user_id':app.user.id}) }}">
@@ -24,8 +24,8 @@
                     </a>
                     {% endif %}
                     {% endif %}
-					<a href="{{ path('app_series_show', {'id': serie.id})}} class="h-full w-full">
-						<img class="border-none rounded-3xl w-36 h-52" src="{{ serie.poster }}" alt="poster">
+					<a href="{{ path('app_series_show', {'id': serie.id})}} class="w-full h-full">
+						<img class="border-none rounded-3xl w-full h-full" src="{{ serie.poster }}" alt="poster">
 					</a>
 			</div>
 		{% endfor %}
