--- a/symfony/assets/styles/app.css
+++ b/symfony/assets/styles/app.css
@@ -48,11 +48,17 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    font-size: xx-large;
+    font-size: 45px;
 }
+
+
 
 .pagination .page {
     display: none;
+}
+
+.pagination .current {
+    font-size: 35px;
 }
 
 .pagination .current::before {
