--- a/symfony/templates/base.html.twig
+++ b/symfony/templates/base.html.twig
@@ -53,7 +53,7 @@
           </ul>
         </ul>
       </div>
-        <div class="mt-40">
+        <div class="xl:mt-40 mt-52">
         {% block body %}{% endblock %}
         </div>
         {% block javascripts %}
