--- a/symfony/templates/user/show.html.twig
+++ b/symfony/templates/user/show.html.twig
@@ -14,11 +14,14 @@
     <a href="{{ path('app_series_index') }}"><button class=" bg-blue-800 hover:bg-blue-custom p-2 rounded-2xl m-5 ml-0" type="submit" >Retour à l'accueil</button></a>
     <h1 class="text-3xl text-blue-500 mb-2 font-semibold">{{ user.name }}</h1>
     <h1 class="text-2xl text-blue-500">Vos séries suivies</h1>
-    
+    <div class="pagination-h">
+        {{ knp_pagination_render(seriesList)}}
+    </div>
     <div class="flex w-full ">
+       
         <div class="flex flex-row w-full flex-wrap items-center">
        
-                {% for serie in app.user.getSeries %}
+                {% for serie in seriesList %}
                 <div class="flex flex-col w-48 mx-5">
                     <h3 class=" font-bold text-white text-center my-5">{{ serie.title }} </h3>
                     <div class="serie-encadre flex flex-col-reverse rounded-2xl mx-5">
