--- a/symfony/templates/series/index.html.twig
+++ b/symfony/templates/series/index.html.twig
@@ -13,6 +13,11 @@
 	<iframe src="{{ path('app_series_random')}}" style="width: 100%; height: 450px; border: 1px solid black;"></iframe>
     <div style="height: 30px;"></div>
 
+		{{ form_start(SeriesSearchForm) }}
+			{{ form_widget(SeriesSearchForm) }}
+			<button class="btn btn-primary">Rechercher</button>
+		{{ form_end(SeriesSearchForm) }}
+
         <div class="pagination-h">
             {{ knp_pagination_render(series)}}
         </div>
