--- a/symfony/templates/base.html.twig
+++ b/symfony/templates/base.html.twig
@@ -17,7 +17,7 @@
         <ul class="barre backdrop-blur-lg flex items-center justify-between text-blue-500 pt-1 pb-2 top-0 rounded-b-2xl w-screen fixed border-b-4 border-blue-custom border-b">
             <a class="hidden xl:inline" href="{{ path('app_series_index') }}"><img class="px-4 h-36 xl:h-24 hidden xl:inline " src="{{ asset('img/logo_pc.png') }}" alt="logo"/></a>
             <a class="inline xl:hidden" href="{{ path('app_series_index') }}"><img class="px-4 h-36 xl:h-24 xl:hidden " src="{{ asset('img/logo_mobile.png') }}" alt="logo"/></a>
-            <ul class="flex text-5xl xl:text-2xl md:text-3xl ">
+            <ul class="flex text-2xl ">
             <li class="nav-item -mb-px px-5 mr-1">
               <a class="inline-block py-4 hover:text-blue-custom font-semibold" href="{{ path('app_series_index') }}">Accueil</a>
             </li>
@@ -27,7 +27,7 @@
             </li>
             <li class="nav-item px-5 mr-1">
                   <div class="dropdown inline-block">
-                    <button class=" text-blue-500 font-semibold py-4 rounded inline-flex items-center">
+                    <button class=" text-blue-500 hover:text-blue-custom font-semibold py-4 rounded inline-flex items-center">
                       <span class="mr-1">{{ app.user.email}} </span>
                       <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/> </svg>
                     </button>
