--- a/symfony/templates/user/index.html.twig
+++ b/symfony/templates/user/index.html.twig
@@ -27,36 +27,30 @@
     <table class="table w-full">
         <thead class="bg-white text-2xl text-black h-16">
             <tr>
-                {# <th>Id</th> #}
                 <th>Nom</th>
                 <th>E-mail</th>
-                {# <th>Password</th> #}
-                {#<th>Date d'enregistrement</th>#}
-                {#<th>Administrateur</th>#}
-                {# <th>UserId</th> #}
-                <th>Actions</th>
+                <th>Date d'enregistrement</th>
+                <th>Incarner</th>
+                <th>Administrateur</th>
             </tr>
         </thead>
         <tbody class="text-center">
         {% for user in users %}
             <tr >
-                {# <td>{{ user.id }}</td> #}
                 <td class="h-10 text-xl">{{ user.name }}</td>
                 <td >{{ user.email }}</td>
-                {# <td>{{ user.password }}</td> #}
-                {#<td>{{ user.registerDate ? user.registerDate|date('d/m/Y H:i:s') : '' }}</td>#}
-                {#<td>{{ user.admin ? 'Oui' : 'Non' }}</td>#}
-                {# <td>{{ user.userId }}</td> #}
+                <td>{{ user.registerDate ? user.registerDate|date('d/m/Y H:i:s') : '' }}</td>
                 <td class="flex justify-around h-10 m-2.5 no-wrap items-center">
-                    
                     {% if not is_granted('IS_IMPERSONATOR') %}
                     <a class="bg-blue-800 hover:bg-blue-600 flex items-center m-5 p-2 rounded-2xl no-wrap" href="{{ path('app_series_index', {'_switch_user': user.email}) }}"><i class="fa-solid mr-2 fa-person"></i></i>Incarner</a>
                     {% endif %}
-                    {# <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a> #}
+                </td>
+
+                <td>
                     {% if user.isAdmin() %}
-                    <a href="{{ path('app_user_promote', {'id': user.id}) }}"><i class="fa-solid fa-minus"></i>rétrograder</a>
+                    <a href="{{ path('app_user_promote', {'id': user.id}) }}" ><img width="75px" src="{{ asset('img/admin_plein.png') }}" style="margin: auto;"></img></a>
                     {% else %}
-                    <a href="{{ path('app_user_promote', {'id': user.id}) }}"><i class="fa-solid fa-plus"></i>promouvoir</a>
+                    <a href="{{ path('app_user_promote', {'id': user.id}) }}"><img width="75px" src="{{ asset('img/admin_eteint.png') }}" style="margin: auto;"></img></a>
                     {% endif %}
                 </td>
             </tr>
@@ -67,7 +61,6 @@
         {% endfor %}
         </tbody>
     </table>
-    {# <a href="{{ path('app_user_new') }}">Crée un nouvel utilisateur</a> #}
     <div class="pagination-b bottom-0 mx-auto w-11/12">
         {{ knp_pagination_render(users)}}
     </div>
