--- a/symfony/templates/series/show.html.twig
+++ b/symfony/templates/series/show.html.twig
@@ -73,7 +73,7 @@
                                         
             
                                 {% endfor %} 
-                                <h1 class="text-3xl mt-2 ml-5">{{series.getRate.value|number_format/2}}/5</h1>
+                                <h1 class="text-3xl mt-2 ml-5">{{series.getRate.value|number_format(2)/2}}/5</h1>
                             </div>
 
                             <div class="w-96 flex flex-col">
