Impossible de mettre une note plus petite que 0 ou supérieur à 10

--- a/symfony/templates/series/show.html.twig
+++ b/symfony/templates/series/show.html.twig
@@ -53,6 +53,7 @@
                     </div>
                     {% if app.user %}
                         <iframe height=300 src="{{ path('app_rating_new', {'id': series.id}) }}"></iframe>
+                        {# <a href="{{ path('app_rating_rates', {'id': series.id}) }}">Voir les avis</a> #}
                     {% endif %}
                 </div>
             </div>
