--- a/symfony/templates/user/index.html.twig
+++ b/symfony/templates/user/index.html.twig
@@ -28,8 +28,8 @@
         <thead class="bg-white text-2xl text-black h-16">
             <tr>
                 <th>Nom</th>
-                <th>E-mail</th>
-                <th>Date d'enregistrement</th>
+                <th >E-mail</th=>
+                <th >Date d'enregistrement</th>
                 <th>Incarner</th>
                 <th>Administrateur</th>
             </tr>
