--- a/symfony/assets/styles/app.css
+++ b/symfony/assets/styles/app.css
@@ -74,7 +74,9 @@ body {
     border-radius: 15px;
     padding-bottom: 1px;
     padding-left: 10px;
+    padding-right: 15px;
     align-self: center;
+    width: max-content;
 }
 
 #genre option {
