--- a/symfony/templates/user/show.html.twig
+++ b/symfony/templates/user/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}User{% endblock %}
+{% block title %}{{user.name}}{% endblock %}
 
 {% block stylesheets %}
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia|Bahnschrift">
@@ -11,9 +11,17 @@
 
 {% block body %}
 <div class="flex-col flex w-4/5 mx-auto">
-    <a href="{{ path('app_series_index') }}"><button class=" bg-blue-800 hover:bg-blue-custom p-2 rounded-2xl m-5 ml-0" type="submit" >Retour à l'accueil</button></a>
-    <h1 class="text-3xl text-blue-500 mb-2 font-semibold">{{ user.name }}</h1>
-    <h1 class="text-2xl text-blue-500">Vos séries suivies</h1>
+    {% if app.user.id == user.id %}
+    <a href="{{ path('app_series_index') }}"><button class=" text-white hover:text-blue-900 bg-blue-800 hover:bg-blue-custom p-2 rounded-2xl m-5 ml-0" type="submit" >Retour à l'accueil</button></a>
+    <h1 class="text-3xl text-cyan-200 mb-2 font-semibold">{{ user.name }}</h1>
+    <h1 class="text-2xl text-white">Vos séries suivies</h1>
+    {% else %}
+    <a href="{{ path('app_admin_dashboard') }}"><button class=" text-white hover:text-blue-900 bg-blue-800 hover:bg-blue-custom p-2 rounded-2xl m-5 ml-0" type="submit" >Retour</button></a>
+    <h1 class="text-2xl text-cyan-200 mb-2 font-semibold">Les séries suivies de {{user.name}}</h1>
+    <h1 class="text-xl text-white">{{user.email}}</h1>
+    <h1 class="text-xl text-white">Inscrit le : {{ user.getRegisterDate()|date("d/m/y") }}</h1>
+    {% endif %}
+    <h1 class="text-xl text-white">Nombre de séries suivies : {{ seriesList|length }}</h1>
 
     <div class=" pagination-my-series">
         {{ knp_pagination_render(seriesList)}}
