--- a/symfony/templates/series/index.html.twig
+++ b/symfony/templates/series/index.html.twig
@@ -32,12 +32,13 @@
                     {% if app.user %}
                     {% if series in app.user.getSeries  %}
                     <a  href="{{ path('app_series_remove_from_index',  {'id': series.id, 'user_id':app.user.id}) }}">
-                        <img class="bg-blue-900 rounded-2xl rounded-bl-none rounded-tr-none serie-plus  absolute" width="60px" src="{{ asset('img/check.png') }}" />
+                        <img class="backdrop-blur-sm bg-white/30 shadow-[3px_3px_15px_2px_rgba(0,0,0,0.3)] hover:bg-red-500/50  rounded-2xl rounded-bl-none rounded-tr-none serie-plus  absolute" width="60px" src="{{ asset('img/check.png') }}" />
                     </a>
                     {% else %}
                     <a href="{{ path('app_series_add_from_index',  {'id': series.id, 'user_id':app.user.id}) }}">
-                        <img class="bg-blue-900 serie-check absolute rounded-2xl rounded-bl-none rounded-tr-none" width="60px" src="{{ asset('img/plus.png') }}" />
+                        <img class="backdrop-blur-sm bg-white/20 shadow-[3px_3px_15px_2px_rgba(0,0,0,0.3)] hover:bg-green-500/50 serie-check absolute rounded-2xl rounded-bl-none rounded-tr-none" width="60px" src="{{ asset('img/plus.png') }}" />
                     </a>
+                    
                     {% endif %}
                     {% endif %}
                     <a href="{{ path('app_series_show', {'id': series.id})}}">
